Add BDE colors to the application style

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,2 +1,8 @@
+@import 'components/color';
+
+$primary-color: color("blue-grey", "lighten-1");
+$secondary-color: color("pink", "accent-4");
+
+@import 'components/variables';
 @import 'materialize';
 @import 'ember-cli-materialize';
