--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,16 @@
-<h2 id="title">Welcome to Ember.js</h2>
+<div class="navbar-fixed">
+  {{#md-navbar name='BDE Pipeline Builder' homeRoute='application'}}
+    {{#link-to 'pipelines.index' tagName='li'}}
+      {{link-to 'Pipelines' 'pipelines.index'}}
+    {{/link-to}}
+  {{/md-navbar}}
+</div>
 
-{{outlet}}
+<div class="row">
+  <div class="col s12">
+    {{outlet}}
+  </div>
+</div>
 
 {{!-- ember-cli-materialize modal container --}}
 {{md-modal-container}}
