Put main content in a container class

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -6,11 +6,12 @@
   {{/md-navbar}}
 </div>
 
+<div class="container">
 <div class="row">
   <div class="col s12">
     {{outlet}}
   </div>
 </div>
-
+</div>
 {{!-- ember-cli-materialize modal container --}}
 {{md-modal-container}}
