--- a/app/templates/pipelines/index.hbs
+++ b/app/templates/pipelines/index.hbs
@@ -1,27 +1,21 @@
-<h3>Pipelines</h3>
+<h2>Pipelines</h2>
 <div class="row">
   <div class="col s12">
-    <div class="row">
-      <div class="col s12 m6">
-	{{#link-to 'pipelines.new' class="btn"}}Create{{/link-to}}
-      </div>
-    </div>
-    <div class="row">
-      <div class="col s12 m6">
-	{{#each model as |pipeline|}}
-	  {{#md-card title=pipeline.title}}
-	    {{#md-card-content}}
-	      {{pipeline.description}}
-	    {{/md-card-content}}
-	    {{#md-card-action}}
-	      {{#link-to 'pipelines'}}Edit{{/link-to}}
-	      <a {{action 'delete' pipeline}}>Delete</a>
-	    {{/md-card-action}}
-	  {{/md-card}}
-	{{/each}}
-      </div>
-    </div>
+    {{#each model as |pipeline|}}
+      {{#md-card title=pipeline.title}}
+	{{#md-card-content}}
+	  {{pipeline.description}}
+	{{/md-card-content}}
+	{{#md-card-action}}
+	  {{#link-to 'pipelines'}}Edit{{/link-to}}
+	  <a {{action 'delete' pipeline}}>Delete</a>
+	{{/md-card-action}}
+      {{/md-card}}
+    {{/each}}
+    {{#md-card class="action-panel center-align" bodyClass="white-text"}}
+      {{#md-card-content}}
+	{{#link-to 'pipelines.new'}}<i class="medium material-icons">add</i>{{/link-to}}
+      {{/md-card-content}}
+    {{/md-card}}
   </div>
 </div>
-
-{{outlet}}
