--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -24,3 +24,9 @@ $card-link-color-light: lighten($secondary-color, 20%) !default;
 	@extend .z-depth-1-half;
     }
 }
+
+/** Workaround to disable validation on form fields */
+input[type=text].valid, input[type=text]:focus.valid, input[type=password].valid, input[type=password]:focus.valid, input[type=email].valid, input[type=email]:focus.valid, input[type=url].valid, input[type=url]:focus.valid, input[type=time].valid, input[type=time]:focus.valid, input[type=date].valid, input[type=date]:focus.valid, input[type=datetime-local].valid, input[type=datetime-local]:focus.valid, input[type=tel].valid, input[type=tel]:focus.valid, input[type=number].valid, input[type=number]:focus.valid, input[type=search].valid, input[type=search]:focus.valid, textarea.materialize-textarea.valid, textarea.materialize-textarea:focus.valid {
+    border-bottom: 1px solid #9e9e9e;
+    box-shadow: none;
+}
