--- a/app/templates/pipelines/steps/index.hbs
+++ b/app/templates/pipelines/steps/index.hbs
@@ -1,21 +1,23 @@
-<h2>Pipelines</h2>
+<h4>Steps</h4>
+
 <div class="row">
   <div class="col s12">
-    {{#each model as |pipeline|}}
-      {{#md-card title=pipeline.title}}
+    {{#each model as |step|}}
+      {{#md-card title=step.title}}
+	{{md-badge text=step.code}}
 	{{#md-card-content}}
-	  {{pipeline.description}}
+	  {{step.description}}
 	{{/md-card-content}}
 	{{#md-card-action}}
-	  {{#link-to 'pipelines.steps' pipeline}}Edit{{/link-to}}
-	  <a {{action 'delete' pipeline}}>Delete</a>
+	  <a {{action 'delete' step}}>Delete</a>
 	{{/md-card-action}}
       {{/md-card}}
     {{/each}}
     {{#md-card class="action-panel center-align" bodyClass="white-text"}}
       {{#md-card-content}}
-	{{#link-to 'pipelines.new'}}<i class="medium material-icons">add</i>{{/link-to}}
+	{{#link-to 'pipelines.steps.new'}}<i class="medium material-icons">add</i>{{/link-to}}
       {{/md-card-content}}
     {{/md-card}}
   </div>
 </div>
+
