--- a/app/templates/pipelines/steps/index.hbs
+++ b/app/templates/pipelines/steps/index.hbs
@@ -6,6 +6,7 @@
       {{#each sortedSteps as |step|}}
 	{{#sortable-item tagName="div" model=step group=group spacing=15}}
 	  {{#md-card title=step.title}}
+	    <span class="dragable"><i class="material-icons">swap_vert</i></span>
 	    {{md-badge text=step.code}}
 	    {{#md-card-content}}
 	      {{step.description}}
@@ -17,11 +18,19 @@
 	{{/sortable-item}}
       {{/each}}
     {{/sortable-group}}
-    {{#md-card class="action-panel center-align" bodyClass="white-text"}}
+
+    <span {{action 'newStep'}}>
+    {{#md-card class="new-step" title="New step"}}
+      {{md-badge text="step_code"}}
       {{#md-card-content}}
-	{{#link-to 'pipelines.steps.new'}}<i class="medium material-icons">add</i>{{/link-to}}
+	Step description
       {{/md-card-content}}
+      {{#md-card-action}}
+	<a class="disabled">Delete</a>
+      {{/md-card-action}}
     {{/md-card}}
+    </span>
+    
   </div>
 </div>
 
